# cohttp_static_handler

./: CHANGES.md  cohttp_static_handler.opam
src/: cohttp_static_handler.ml  cohttp_static_handler.mli  dune
test/: dune  test.ml
